changed card header style and fixed form problem of overlapping with the navbar

--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -8854,37 +8854,37 @@ button:focus {
   .card .card-header-primary:not(.card-header-icon):not(.card-header-text), .card.bg-primary,
   .card.card-rotate.bg-primary .front,
   .card.card-rotate.bg-primary .back {
-    background: linear-gradient(60deg, #ab47bc, #8e24aa); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9);  }
   .card .card-header-info .card-icon,
   .card .card-header-info .card-text,
   .card .card-header-info:not(.card-header-icon):not(.card-header-text), .card.bg-info,
   .card.card-rotate.bg-info .front,
   .card.card-rotate.bg-info .back {
-    background: linear-gradient(60deg, #26c6da, #00acc1); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9);  }
   .card .card-header-success .card-icon,
   .card .card-header-success .card-text,
   .card .card-header-success:not(.card-header-icon):not(.card-header-text), .card.bg-success,
   .card.card-rotate.bg-success .front,
   .card.card-rotate.bg-success .back {
-    background: linear-gradient(60deg, #66bb6a, #43a047); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9);  }
   .card .card-header-warning .card-icon,
   .card .card-header-warning .card-text,
   .card .card-header-warning:not(.card-header-icon):not(.card-header-text), .card.bg-warning,
   .card.card-rotate.bg-warning .front,
   .card.card-rotate.bg-warning .back {
-    background: linear-gradient(60deg, #ffa726, #fb8c00); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9);  }
   .card .card-header-danger .card-icon,
   .card .card-header-danger .card-text,
   .card .card-header-danger:not(.card-header-icon):not(.card-header-text), .card.bg-danger,
   .card.card-rotate.bg-danger .front,
   .card.card-rotate.bg-danger .back {
-    background: linear-gradient(60deg, #ef5350, #e53935); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9); }
   .card .card-header-rose .card-icon,
   .card .card-header-rose .card-text,
   .card .card-header-rose:not(.card-header-icon):not(.card-header-text), .card.bg-rose,
   .card.card-rotate.bg-rose .front,
   .card.card-rotate.bg-rose .back {
-    background: linear-gradient(60deg, #ec407a, #d81b60); }
+    background: linear-gradient(60deg, #DB1A53, #e7d2d9); }
   .card .card-header-primary .card-icon,
   .card .card-header-primary:not(.card-header-icon):not(.card-header-text),
   .card .card-header-primary .card-text {
